--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookies-next": "^4.1.0",
     "gsap": "^3.12.4",
     "js-cookie": "^3.0.5",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
