--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "sass": "^1.69.7"
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
+    "sass": "^1.69.7",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
