--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "cookies-next": "^4.1.0",
+    "framer-motion": "^10.18.0",
     "gsap": "^3.12.4",
     "js-cookie": "^3.0.5",
-    "next": "14.0.4",
+    "lenis": "^0.0.2",
     "locomotive-scroll": "^5.0.0-beta.8",
+    "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1",
