--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "locomotive-scroll": "^5.0.0-beta.8",
     "next": "14.0.4",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.5"
