--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-input-mask": "^2.0.4",
     "react-multi-carousel": "^2.8.4",
+    "react-phone-input-2": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
