--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-type-animation": "^3.2.0",
     "react-visibility-sensor": "^5.1.1",
     "sass": "^1.69.7",
     "slick-carousel": "^1.8.1",
